web-infras/parser/tests/fixtures/self-added/let-as-identifier/module/let-as-func-declar-param/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,12)
1|function f(let) {
 |          ^
[SyntaxError]: unexpect keyword in strict mode (1,12)
1|function f(let) {
 |          ^
